framec_tests/common/tests/negative/test_inline_target_directive_python.frm
# Negative: inline #[target: python] directives must error

system InlineTargetDirectivePython {
    interface:
        start()

    machine:
        $Init {
            start() {
                #[target: python]
                print("should not be allowed")
                return
            }
        }
}

